# rust-encryptCLI

./: Cargo.toml
src/: main.rs  rc4.rs
tests/: cli_tests.rs
