[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.9.2"
clap = { version = "3.1.6", features = ["derive"] }
glob = {version = "0.3.0"}
base64 = {version = "0.13.0"}

[dev-dependencies]
assert_cmd = "1"
